What's New for PSPRadio 
========================

0.38.09 (r) (2006-04-x)
NEW FEATURES
(raf) Dyn/Retawq: tips can be overriden with your own html. Just replace APP_Retawq/tips.html!
BUG FIXES
(raf) Core: Networking. Network profile enumeration code modification. Based on idea from Danzel from ps2dev forums. This may help people who's profile wasn't showing up.
(raf) Dyn/Core: No longer tries to 'continue' a plugin if 'Off' is selected.
(raf) Dyn/Core: Now plugin giveup access code is better handled. Retawq can switch to pspradio now seamlessly. (Select the running plugin again to return to the plugin.)
(raf/ditlew) Core: If F/W 2.6 is detected, don't poll for HPRM. This allows PSPRadio to work on 2.6 via eLoader.
(raf) Core: On exit, just call the game exit syscall. This may prevent the app from crashing when on eLoader. (It still hangs on 2.6)
(raf) Dyn/Core: Corrected bug that would cause FSS plugins to report error when loading even if they loaded correctly.

0.38.08 (r990) (2006-03-31)
NEW FEATURES
(raf) Dyn/UI Plugins: Implemented albadross idea to use the plugin name to load configuration files. This allows to select different skins via the plugin menu. (Implemented for Text and Text3D plugins). (r930)
(raf) TextUI: OptionsScreen and Plugins Menu can now display more options than what fits on the line. This was implemented using a new config element in the OptionsScreen.cfg (X_RANGE) so skins will need to be revised. (r934)
	  If X_RANGE is not set, then defaults are used (r944)
(raf) Dynamic: Added Application plugins. Sample plugin added too: netscan. (If plugin stops responding, L+R+TRIANGLE can be used to return control to pspradio.).
(raf) TextUI: If the background specified in the config file is just a filename, then we look under the text ui config directory. Also, if the filename starts with "ms0:", then we asume it's a absolute path.
(raf) Dynamic: New plugin: Retawq (text based web browser).
(raf) TextUI: Added new screen config for plugins screen.